--- a/public/style.css
+++ b/public/style.css
@@ -34,12 +34,22 @@ input, select, option {
   font-size: 18px;
 }
 
+.flag {
+  font-size: 36px;
+  margin-left: 10px;
+  margin-top: -6px;
+}
+
 .m-t-100 {
   margin-top: 100px;
 }
 
 .m-r-10 {
   margin-right: 10px;
+}
+
+.m-l-10 {
+  margin-left: 10px;
 }
 
 .color-red {
