--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
 <%
 
 const languages = [
-  { emoji: "GB", lang: "__", "label": "Choose..." },
+  { emoji: "na", lang: "na", "label": "Choose..." },
   { emoji: "CZ", lang: "cs", "label": "Czech" }, 
   { emoji: "DK", lang: "da", "label": "Danish" }, 
   { emoji: "NL", lang: "nl", "label": "Dutch" },
@@ -25,14 +25,14 @@ const getLanguages = (lang) => {
   const found = languages.find(item => item.lang == lang);
   return languages.map((item) => {
     const sel = (item.lang === lang) ? ' selected' : '';
-    return `<option value="${item.lang}"` + sel + `>${item.label}</option>`
+    const emoji = item.lang == 'na' ? '' : getEmoji(item.lang);
+    return `<option value="${item.lang}"` + sel + `>${emoji} ${item.label}</option>`
   }).join('');
 }
 
 const getEmoji = (lang) => {
   const found = languages.find(item => item.lang == lang);
-  const flag = emojiFlags.countryCode(found.emoji);
-  return flag.emoji;
+  return found.emoji == 'na' ? '' : emojiFlags.countryCode(found.emoji).emoji;
 }
 
 %>
