--- a/public/style.css
+++ b/public/style.css
@@ -63,3 +63,10 @@ input, select, option {
 .uppercase {
   text-transform: uppercase;
 }
+
+.new-tab-icon::after {
+  font-family: "Font Awesome 5 Free"; 
+  font-weight: 900; 
+  content: "\f35d";
+  margin-left: 5px;
+}
