--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -4,7 +4,12 @@
 <main role="main" class="container">
   <h3 class="color-red uppercase">About</h3>
   <section class="jumbotron p4">
-    <p class="lead">This app uses <a href="https://www.npmjs.com/package/@vitalets/google-translate-api">@vitalets/google-translate-api</a> - a free API for Google Translate in Node.js</p>
+    <p class="lead">This app uses <a href="https://www.npmjs.com/package/@vitalets/google-translate-api">@vitalets/google-translate-api</a> - a free API for Google Translate in Node.js. It instantly translate words and phrases between any language and a selection of 28 languages</p>
+    <ul class="lead">
+      <li>Built with: Node, Express, EJS and Bootstrap</li>
+      <li>Fully responsive and mobile-friendly</li>
+      <li>Emoji flags from <a href="https://www.npmjs.com/package/emoji-flags">emoji-flags npm</a></li>
+    </ul>
   </section>
 </main>
 
