Updated main heading

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,7 +2,7 @@
 <%- include('../partials/nav.ejs'); %>
 
 <main role="main" class="container">
-  <h3 class="color-red uppercase">Translator</h3>
+  <h3 class="color-red uppercase">Language Translator</h3>
   <section class="jumbotron p-4">
     <p class="lead">Instantly translate words and phrases between any language and a selection of <%= Object.keys(languages.list).length-1 %> languages</p>
 
